accelerated compositing does not work with ati driver https://bugs.webkit.org/show_bug.cgi?id=97472

Patch by Arnaud Renevier <a.renevier@sisa.samsung.com> on 2012-10-11
Reviewed by Martin Robinson.

Create m_parentWindow at positive position. Otherwise, parts of it are
not displayed on ati drivers.

Covered by existing tests.

* platform/gtk/RedirectedXCompositeWindow.cpp:
(WebCore::RedirectedXCompositeWindow::RedirectedXCompositeWindow):

Canonical link: https://commits.webkit.org/117046@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@131076 268f45cc-cd09-0410-ab3c-d52691b4dbfc